--- a/index.html.twig
+++ b/index.html.twig
@@ -10,6 +10,7 @@
 {% endblock %}
 
 {% block content %}
+    {% if project.introduction %}
     <div class="row">
         <div class="span12">
             <div class="well">
@@ -17,6 +18,7 @@
             </div>
         </div>
     </div>
+    {% endif %}
     <div class="row">
         <div class="span7">
             {% if project.namespace.namespaces|length > 0 or not project.index.packages %}
