--- a/reports/markers.html.twig
+++ b/reports/markers.html.twig
@@ -22,7 +22,7 @@
         <div class="span8">
 
             <ul class="breadcrumb">
-                <li><a href="{{ path('/') }}"><i class="icon-map-marker"></i></a><span class="divider">\</span></li>
+                <li><a href="{% if path('/') == '' %}?{% else %}{{ path('/') }}{% endif %}"><i class="icon-map-marker"></i></a><span class="divider">\</span></li>
                 <li>Markers</li>
             </ul>
 
