--- a/reports/errors.html.twig
+++ b/reports/errors.html.twig
@@ -30,7 +30,7 @@
 
         <div class="span8">
             <ul class="breadcrumb">
-                <li><a href="{{ path('/') }}"><i class="icon-remove-sign"></i></a><span class="divider">\</span></li>
+                <li><a href="{% if path('/') == '' %}?{% else %}{{ path('/') }}{% endif %}"><i class="icon-remove-sign"></i></a><span class="divider">\</span></li>
                 <li>Compilation Errors</li>
             </ul>
 
