--- a/layout.html.twig
+++ b/layout.html.twig
@@ -13,7 +13,7 @@
 
     {% block javascripts %}
         <!--[if lt IE 9]>
-        <script src="http://html5shim.googlecode.com/svn/trunk/html5.js" type="text/javascript"></script>
+        <script src="https://html5shim.googlecode.com/svn/trunk/html5.js" type="text/javascript"></script>
         <![endif]-->
         <script src="{{ path('js/jquery-1.7.1.min.js') }}" type="text/javascript"></script>
         <script src="{{ path('js/jquery-ui-1.8.2.custom.min.js') }}" type="text/javascript"></script>
