--- a/namespace.html.twig
+++ b/namespace.html.twig
@@ -107,7 +107,12 @@
                 <li class="nav-header">
                     <i class="icon-map-marker"></i> Namespaces
                 </li>
-                {{ self.renderNamespaceSidebar(node) }}
+                <a href="{{ path(node) }}" title="{{ node.name }}">
+                    <i class="icon-th"></i> {{ node.name }}
+                </a>
+                <ul class="nav nav-list nav-namespaces">
+                    {{ self.renderNamespaceSidebar(node) }}
+                </ul>
             </ul>
         </div>
 
