--- a/index.html.twig
+++ b/index.html.twig
@@ -18,7 +18,7 @@
                         <li class="nav-header">Namespaces</li>
                         {% block listRootNamespaces %}
                             <li><a href="{{ path(project.namespace) }}">Global ({{ project.namespace.name }})</a></li>
-                            {% for namespace in project.namespace.children %}
+                            {% for namespace in project.namespace.children|sort_asc %}
                                 <li><a href="{{ path(namespace) }}">{{ namespace.name }}</a></li>
                             {% endfor %}
                         {% endblock %}
@@ -32,7 +32,7 @@
                         <li class="nav-header">Packages</li>
                         {% block listRootPackages %}
                             <li><a href="{{ path(project.indexes.packages|first) }}">Global ({{ (project.indexes.packages|first).name }})</a></li>
-                            {% for package in (project.indexes.packages|first).children %}
+                            {% for package in (project.indexes.packages|first).children|sort_asc %}
                                 <li><a href="{{ path(package) }}">{{ package.name }}</a></li>
                             {% endfor %}
                         {% endblock %}
